cabal-version:       2.4
name:                uusi
version:             0.0.0.0
synopsis:            See README for more info
description:         See README for more info
homepage:            https://github.com/berberman/uusi
bug-reports:         https://github.com/berberman/uusi/issues
license:             MIT
license-file:        LICENSE
author:              berberman
maintainer:          berberman <1793913507@qq.com>
copyright:           2020 berberman
category:            Distribution
build-type:          Simple
extra-doc-files:     README.md
                     CHANGELOG.md
tested-with:         GHC == 8.8.3

source-repository head
  type:                git
  location:            https://github.com/berberman/uusi.git
common common-options
  build-depends:       base ^>= 4.13.0.0
  
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
  if impl(ghc >= 8.0)
    ghc-options:       -Wredundant-constraints
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields
  if impl(ghc >= 8.8)
    ghc-options:       -Wmissing-deriving-strategies

  default-language:    Haskell2010
executable uusi
  import:              common-options
  hs-source-dirs:      app
  main-is:             Main.hs
  
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N