cabal-version:   2.4
name:            uusi
version:         0.3.0.0
synopsis:        Tweak dependencies in .cabal files
description:
  @uusi@ is a command-line program to tweak .cabal files.
  It is used in distribution packaging.
  See README for details.

homepage:        https://github.com/berberman/uusi
bug-reports:     https://github.com/berberman/uusi/issues
license:         MIT
license-file:    LICENSE
author:          berberman
maintainer:      berberman <1793913507@qq.com>
copyright:       2020 berberman
category:        Distribution
build-type:      Simple
extra-doc-files:
  CHANGELOG.md
  README.md

tested-with:     GHC ==8.10.2

source-repository head
  type:     git
  location: https://github.com/berberman/uusi.git

common common-options
  build-depends:
    , base          >=4.8 && <5
    , Cabal
    , microlens     ^>=0.4
    , microlens-th  ^>=0.4
    , text

  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-uni-patterns
    -Wincomplete-record-updates

  if impl(ghc >=8.0)
    ghc-options: -Wredundant-constraints

  if impl(ghc >=8.2)
    ghc-options: -fhide-source-paths

  if impl(ghc >=8.4)
    ghc-options: -Wmissing-export-lists -Wpartial-fields

  if impl(ghc >=8.8)
    ghc-options: -Wmissing-deriving-strategies

  default-language: Haskell2010

library
  import:          common-options
  hs-source-dirs:  src
  exposed-modules:
    Distribution.Uusi.Core
    Distribution.Uusi.Types
    Distribution.Uusi.Utils

executable uusi
  import:         common-options
  hs-source-dirs: app
  main-is:        Main.hs
  other-modules:  Options
  build-depends:  uusi
  ghc-options:    -threaded -rtsopts -with-rtsopts=-N

executable gen-setup
  import:         common-options
  hs-source-dirs: gen-setup
  main-is:        Main.hs
  build-depends:  filepath, directory
  ghc-options:    -threaded -rtsopts -with-rtsopts=-N

test-suite uusi-tests
  import:         common-options
  hs-source-dirs: test
  build-depends:
    , HUnit
    , uusi

  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  ghc-options:    -threaded -rtsopts -with-rtsopts=-N
